# creamlinux-installer

./: .gitignore  .releaserc  .releaserc.js  CHANGELOG.md  LICENSE.md  README.md  creamlinux.nix  default.nix  dlc_fetcher.py  eslint.config.js  flake.nix  helper.py  index.html  installer.sh  latest.json  main.py  package-lock.json  package.json  package.nix  tsconfig.app.json  ui_handler.py  updater.py  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  report.md
.github/workflows/: build-release.yml  build-test.yml  build.yml  release.yml  test-build.yml  update-npm-hash.yml
docs/: adding-icons.md  icons.md  release.md
scripts/: api-changelog.js  generate-updater-json.js  optimize-svg.js  prepare-release.js  release.js  set-version.js  sync-version.js  update-tauri-config.js
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: cache.rs  config.rs  dlc_manager.rs  epic_scanner.rs  installer.rs  main.rs  reporting.rs  searcher.rs  smokeapi_config.rs  system_info.rs
src-tauri/src/cache/: mod.rs  storage.rs  version.rs
src-tauri/src/installer/: file_ops.rs  mod.rs
src-tauri/src/unlockers/: creamlinux.rs  koaloader.rs  mod.rs  smokeapi.rs
src-tauri/src/utils/: bitness.rs  mod.rs
src/components/: ActionButton.tsx  AnimatedBackground.tsx  AnimatedCheckbox.tsx  DlcSelectionDialog.tsx  GameItem.tsx  GameList.tsx  Header.tsx  ImagePreloader.tsx  InitialLoadingScreen.tsx  ProgressDialog.tsx  Sidebar.tsx
src/contexts/: AppContext.tsx  index.ts  (+2 more)
(+141 files in other folders)
