[package]
name = "creamlinux-installer"
version = "1.3.3"
description = "DLC Manager for Steam games on Linux"
authors = ["tickbase"]
license = "MIT"
repository = "https://github.com/Novattz/creamlinux-installer"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
xdg = "2"
log = "0.4"
log4rs = "1.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
zip = "0.6"
tempfile = "3.8"
walkdir = "2.3"
parking_lot = "0.12"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
num_cpus = "1.16.0"
tauri-plugin-process = "2"
async-trait = "0.1.89"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
